refactor: 清理 speckit 相关文件，添加测试用例和代码改进
- 删除 .claude 和 .specify 相关目录和文件
- 添加单元测试文件（cache, config, logger, tools）
- 添加 LICENSE 和 Taskfile.yml
- 优化代码结构和配置

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Binaries
-notion-mcp
+notion-as-mcp
 main
 *.exe
 *.exe~
@@ -40,7 +40,6 @@ cover.out
 
 # Cache directory
 .cache/
-~/.cache/notion-mcp/
 
 # Temporary
 *.tmp
