feat: add Docker support and streamable HTTP transport
- Add Dockerfile and .dockerignore for containerized deployment
- Add streamable HTTP transport alongside stdio, using SDK built-in StdioTransport
- Add --transport and --port CLI flags for transport selection
- Add SERVER_HOST, SERVER_PORT, TRANSPORT_TYPE config options
- Rename project references from notion-mcp to notion-as-mcp
- Add todo block parsing support in markdown converter
- Update Taskfile with docker and multi-transport serve tasks
- Remove custom stdio transport in favor of mcp.StdioTransport

--- a/.env.example
+++ b/.env.example
@@ -17,9 +17,9 @@ NOTION_TYPE_FIELD=Type
 # How long cached data is valid
 CACHE_TTL=5m
 
-# Cache directory (default: ~/.cache/notion-mcp)
+# Cache directory (default: ~/.cache/notion-as-mcp)
 # Where file cache is stored
-CACHE_DIR=~/.cache/notion-mcp
+CACHE_DIR=~/.cache/notion-as-mcp
 
 # Log level (default: info)
 # Options: debug, info, warn, error
@@ -39,3 +39,17 @@ POLL_INTERVAL=60s
 # Refresh on start (default: true)
 # Whether to refresh data when server starts
 REFRESH_ON_START=true
+
+# Server host (default: 0.0.0.0)
+# Address to listen on for streamable transport
+SERVER_HOST=0.0.0.0
+
+# Server port (default: 3100)
+# Port to listen on for streamable transport
+SERVER_PORT=3100
+
+# Transport type (default: streamable)
+# Options: streamable (SSE), stdio
+# streamable: HTTP server with SSE for remote connections
+# stdio: Standard input/output for local connections
+TRANSPORT_TYPE=streamable
