feat: improve cache merging and add immediate refresh on startup
- Merge resources and prompts cache when fetching pages
- Add RefreshOnce method to trigger immediate cache refresh
- Add startup cache refresh to ensure fresh data on launch
- Improve logging with page type counts
- Add Debug 3100 launch config for testing

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,19 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Debug Notion MCP Server",
+            "name": "Debug 3101",
             "type": "go",
             "request": "launch",
             "program": "${workspaceFolder}/main.go",
             "args": ["serve","-p","3101"],
+            "envFile": "${workspaceFolder}/.env",
+        },
+        {
+            "name": "Debug 3100",
+            "type": "go",
+            "request": "launch",
+            "program": "${workspaceFolder}/main.go",
+            "args": ["serve","-p","3100"],
             "envFile": "${workspaceFolder}/.env",
         }
     ]
